[gd_scene load_steps=2 format=3 uid="uid://r4x7t5u6382f"]

[ext_resource type="Script" path="res://scripts/mainmenu/MainMenu.gd" id="1_61qut"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_61qut")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonPlay" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "PLAY"

[node name="ButtonCredits" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "CREDITS"

[node name="ButtonExit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "EXIT"

[connection signal="pressed" from="Control/VBoxContainer/ButtonPlay" to="." method="_on_button_play_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/ButtonCredits" to="." method="_on_button_credits_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/ButtonExit" to="." method="_on_button_exit_pressed"]
